add download app function

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/images/profile-image.png" rel="icon" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <title>Vansh Mehta</title>
   </head>
   <body class="dark">
